--- a/lp_sketch.ipynb
+++ b/lp_sketch.ipynb
@@ -2,26 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The line_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext line_profiler\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import math\n",
     "import line_profiler\n",
-    "%load_ext line_profiler"
+    "%load_ext line_profiler\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lp_norm_sketch(A, k, n, _lambda, _epsilon):\n",
     "    # compute the number of counters we need\n",
-    "    s1 = math.ceil(8*k*n**(1-1/k)/(_lambda**2))\n",
-    "    s2 = math.ceil(2*math.log(1/_epsilon))\n",
+    "    c1 = 23\n",
+    "    s1 = math.ceil(c1*(k*n**(1-1/k)-1)/(_lambda**2))\n",
+    "    s2 = math.ceil(2/c1/((1/2-1/c1)**2) *math.log(1/_epsilon))\n",
+    "    print(s1*s2)\n",
     "    \n",
     "    X = np.zeros((s2, s1))  # the random element we care about\n",
     "    r = np.zeros((s2, s1))  # stores the frequency count\n",
@@ -35,25 +47,25 @@
     "        r[to_change] = 0  # reset counter as needed\n",
     "        r[X == a] += 1\n",
     "    \n",
-    "    return np.median(np.mean(cnt*(r**k - (r-1)**k), axis=1), axis=0)"
+    "    return np.median(np.mean((cnt+1)*(r**k - (r-1)**k), axis=1), axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[False, False, False],\n",
-       "       [False, False, False],\n",
-       "       [False, False, False],\n",
+       "array([[False, False,  True],\n",
+       "       [ True,  True, False],\n",
+       "       [False, False,  True],\n",
        "       [ True, False,  True],\n",
        "       [False, False, False]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -84,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([17, 33, 36, ..., 41, 29, 42])"
+       "array([37, 35, 23, ..., 13, 25, 48])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2009634"
+       "20754"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,19 +150,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%lprun -f lp_norm_sketch lp_norm_sketch(A, k, n, 0.1, 0.1)"
+    "[20692.239703022802,   #c1=8\n",
+    " 20796.888810323493,\n",
+    " 20756.93830652289,\n",
+    " 20749.690648753756,\n",
+    " 20720.34647339579,\n",
+    " 20882.269754286724,\n",
+    " 20721.230334099346,\n",
+    " 20739.79140887396,\n",
+    " 20791.408873961464,\n",
+    " 20805.550645218314]\n",
+    "\n",
+    "\n",
+    "[20863.31355489286,   #c1=23 \"optimal\"\n",
+    " 20660.097764933747,\n",
+    " 20921.17317920497,\n",
+    " 20859.931749008516,\n",
+    " 20688.873858640512,\n",
+    " 20667.90666215759,\n",
+    " 20766.96283087896,\n",
+    " 20757.247824883943,\n",
+    " 20571.986349801704,\n",
+    " 20826.236664924523]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32527\n",
+      "32527\n",
+      "32527\n",
+      "32527\n",
+      "32527\n",
+      "32527\n",
+      "32527\n",
+      "32527\n",
+      "32527\n",
+      "32527\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[20798.87478095121,\n",
+       " 20754.54238017647,\n",
+       " 20743.966550865436,\n",
+       " 20688.8123712608,\n",
+       " 20770.898023180744,\n",
+       " 20776.30891259569,\n",
+       " 20720.04796015618,\n",
+       " 20837.673317551573,\n",
+       " 20789.098287576475,\n",
+       " 20702.647031696742]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[lp_norm_sketch(A, k, n, 0.1, 0.1) for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30227\n"
+     ]
+    }
+   ],
+   "source": [
+    "%lprun -f lp_norm_sketch lp_norm_sketch(A, k, n, 0.1, 0.1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -315,21 +403,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "107483\n",
+      "77792\n",
+      "59402\n",
+      "59400\n",
+      "56570\n",
+      "50912\n",
+      "42429\n",
+      "46671\n",
+      "50913\n",
+      "36770\n",
+      "39598\n",
+      "42428\n",
+      "45256\n",
+      "48084\n",
+      "50912\n",
+      "53742\n",
+      "56570\n",
+      "59398\n",
+      "62226\n",
+      "32527\n",
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "_lambda = 0.1\n",
+    "_epsilon = 0.1\n",
+    "k = 2\n",
+    "n = 50\n",
+    "for c1 in range(4, 100):\n",
+    "    s1 = math.ceil(c1*k*n**(1-1/k)/(_lambda**2))\n",
+    "    s2 = math.ceil(2/c1/((1/2-1/c1)**2) *math.log(1/_epsilon))\n",
+    "    print(s1*s2)\n",
+    "    if s2 == 1: break\n",
+    "        \n",
+    "print(c1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAD8CAYAAABn919SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAGSdJREFUeJzt3X1wXPV97/H39+yDHm3JlhVhbIxw\ncCCUFJMoFEomkwBJSZoJtJNyyaSt28uM507b29DbNqXTPzqd6XTInUwS7kyHGU9I6nZyExInxL5k\nmpYa6G3/qIPMU8A2NRAb20iWwJYfZUm7++0f56y0kne1a1mr1Tn7ec1ozuOe/a6O/Tk//c7Dmrsj\nIiLxFzS6ABERWRwKdBGRhFCgi4gkhAJdRCQhFOgiIgmhQBcRSQgFuohIQijQRUQSQoEuIpIQ6aV8\nszVr1nh/f/9SvqWISOzt3bv3HXfvrbbekgZ6f38/g4ODS/mWIiKxZ2aHa1lPXS4iIgmhQBcRSQgF\nuohIQijQRUQSQoEuIpIQCnQRkYRQoIuIJEQsAv2JF47y7T01XYYpItK0YhHo/++lIR5/7kijyxAR\nWdZiEeiBGbm8vsxaRGQ+sQj0VAAFV6CLiMynaqCb2XVm9mLJz2kze9DMVpvZU2Z2MBquqleR6SAg\nV1Cgi4jMp2qgu/tr7r7Z3TcDHwLOA08ADwG73X0TsDuark+RgVFQoIuIzOtSu1zuBN5w98PAPcD2\naP524N7FLKxUOjDy6nIREZnXpQb6/cB3ovE+dx+KxoeBvnIvMLOtZjZoZoOjo6MLK1InRUVEqqo5\n0M0sC3wW+P7cZe7uQNnEdfdt7j7g7gO9vVWfz15WOjCdFBURqeJSWuifAp539+PR9HEzWwsQDUcW\nu7iiIDCdFBURqeJSAv3zzHS3AOwCtkTjW4Cdi1XUXKkAnRQVEamipkA3sw7gE8APS2Y/DHzCzA4C\nd0XTdaHLFkVEqqvpO0Xd/RzQM2feu4RXvdRdYLpsUUSkmljcKZpOqQ9dRKSaWAR6YLoOXUSkmlgE\nuk6KiohUF5NA10lREZFq4hHoZoBa6SIi84lFoKdTYaCrlS4iUlksAj0ottB1YlREpKJYBHo6UAtd\nRKSaWAR6EAV6XoEuIlJRLAI96kJXoIuIzCMegZ4Ky1Sgi4hUFo9A10lREZGqYhHoOikqIlJdLAK9\neFJUNxaJiFQWi0BXC11EpLpYBLouWxQRqS4WgV48KapAFxGpLB6Brha6iEhVCnQRkYSIRaAXT4rq\nW4tERCqLRaDrpKiISHWxCHSdFBURqa6mQDezbjPbYWYHzGy/md1mZqvN7CkzOxgNV9WrSPWhi4hU\nV2sL/RHgJ+5+PXATsB94CNjt7puA3dF0XSjQRUSqqxroZtYFfBR4DMDdJ919DLgH2B6tth24t15F\npnRSVESkqlpa6NcAo8C3zOwFM/uGmXUAfe4+FK0zDPSVe7GZbTWzQTMbHB0dXVCRMy30woJeLyLS\nDGoJ9DTwQeBRd78ZOMec7hV3d6Bs89ndt7n7gLsP9Pb2LqjI6csWleciIhXVEuhHgaPuviea3kEY\n8MfNbC1ANBypT4kzXxKtPnQRkcqqBrq7DwNHzOy6aNadwD5gF7AlmrcF2FmXCtFJURGRWqRrXO9/\nAt82syzwJvC7hAeD75nZA8Bh4L76lKiToiIitagp0N39RWCgzKI7F7ec8nRSVESkuljcKaqToiIi\n1cUi0AO10EVEqopFoM88y6XBhYiILGPxCHS10EVEqopFoOtLokVEqotHoKeiQM8r0EVEKolFoGdS\nYZlT6nIREakoXoGeUwtdRKSSWAR6KjDMIKcWuohIRbEIdAhb6VPqQxcRqSg+gR4YU7oQXUSkotgE\nejoVkFOgi4hUFJtAz6QCpnQduohIRTEKdGMqpxa6iEglsQn0dMp0p6iIyDxiE+jhVS5qoYuIVBKf\nQA8C3fovIjKP2AR6OqXLFkVE5hObQNdVLiIi84tRoJuuQxcRmUdsAj0d6KSoiMh8YhPombSe5SIi\nMp90LSuZ2SHgDJAHcu4+YGargceBfuAQcJ+7n6xPmeGzXPS0RRGRyi6lhf5xd9/s7gPR9EPAbnff\nBOyOpusmnTI9D11EZB6X0+VyD7A9Gt8O3Hv55VQWXuWiFrqISCW1BroD/2xme81sazSvz92HovFh\noG/RqyuRSenGIhGR+dTUhw58xN2Pmdl7gKfM7EDpQnd3MyubttEBYCvAhg0bFl6onocuIjKvmlro\n7n4sGo4ATwC3AMfNbC1ANByp8Npt7j7g7gO9vb0LLlRXuYiIzK9qoJtZh5mtKI4DnwReAXYBW6LV\ntgA761Uk6CoXEZFqauly6QOeMLPi+v/X3X9iZs8B3zOzB4DDwH31KzP8xiI9D11EpLKqge7ubwI3\nlZn/LnBnPYoqR89yERGZX3zuFNWzXERE5hWjQA8oOOTVShcRKSs2gZ5OGYAuXRQRqSA2gZ5NhaUq\n0EVEyotNoLekw1IndaWLiEhZsQn0bBToEwp0EZGyYhPoLekUoEAXEakkRoGuLhcRkfnEJtBnulzy\nDa5ERGR5ik2gq8tFRGR+8Qn0TNRCn1Kgi4iUE5tAL16Hri4XEZHyYhPoxRa6ToqKiJQXn0BXH7qI\nyLxiFOjqchERmU9sAl13ioqIzC82ga4bi0RE5hejQFcfuojIfGIT6JnoeegTU+pDFxEpJzaBbma0\npAO10EVEKohNoAMKdBGRecQr0DMpBbqISAU1B7qZpczsBTN7Mpq+xsz2mNnrZva4mWXrV2Yomwp0\nHbqISAWX0kL/IrC/ZPrLwNfc/VrgJPDAYhZWTktGXS4iIpXUFOhmth74VeAb0bQBdwA7olW2A/fW\no8BSremUrnIREamg1hb614EvAcXmcQ8w5u65aPoosG6Ra7tIezbF+UkFuohIOVUD3cw+A4y4+96F\nvIGZbTWzQTMbHB0dXcgmprVlU5xToIuIlFVLC/124LNmdgj4LmFXyyNAt5mlo3XWA8fKvdjdt7n7\ngLsP9Pb2Xlax7dkU45O56iuKiDShqoHu7n/u7uvdvR+4H3ja3b8APAN8LlptC7CzblVG2rNpdbmI\niFRwOdeh/xnwv8zsdcI+9ccWp6TK2rIpxhXoIiJlpauvMsPdnwWejcbfBG5Z/JIqa8/opKiISCWx\nulO0PZtifCpPoeCNLkVEZNmJVaC3ZcM/KC7oblERkYvEKtDbs+Ez0dXtIiJysVgFelsU6DoxKiJy\nsVgFulroIiKVxTTQdXORiMhcMQv08KSoulxERC4Ws0BXl4uISCXxDHQ9QldE5CKxCvS26S4X9aGL\niMwVq0Bvz4Qt9HMTaqGLiMwVr0Bv0VUuIiKVxCrQW9IpWtIBZy4o0EVE5opVoAOsbMtw+sJUo8sQ\nEVl2YhfoK1rTnB5XC11EZK7YBfrKVrXQRUTKiV2gr2hNc1p96CIiF4ldoK9sy3BGLXQRkYvEL9Bb\nM+pDFxEpI4aBnlYfuohIGfEL9LYMk7kCF/Q8FxGRWeIX6K3h81x0c5GIyGxVA93MWs3sp2b2kpm9\namZ/Fc2/xsz2mNnrZva4mWXrXy6saM0A6MSoiMgctbTQJ4A73P0mYDNwt5ndCnwZ+Jq7XwucBB6o\nX5kzVraFLXRduigiMlvVQPfQ2WgyE/04cAewI5q/Hbi3LhXO0dUWttDHzk8uxduJiMRGTX3oZpYy\nsxeBEeAp4A1gzN2LzeSjwLr6lDjb6o4WAE6cU6CLiJSqKdDdPe/um4H1wC3A9bW+gZltNbNBMxsc\nHR1dYJkzVneEXfUKdBGR2S7pKhd3HwOeAW4Dus0sHS1aDxyr8Jpt7j7g7gO9vb2XVSyEV7lkUsa7\nCnQRkVlqucql18y6o/E24BPAfsJg/1y02hZgZ72KnFMPq9qznDirQBcRKZWuvgprge1mliI8AHzP\n3Z80s33Ad83sr4EXgMfqWOcsqzuyaqGLiMxRNdDd/WXg5jLz3yTsT19yPZ1ZTpybaMRbi4gsW7G7\nUxTCK110UlREZLZYBnqPulxERC4Sy0Bf3ZHlzIUcEzk9oEtEpCiWgX7FylYARk6rH11EpCiegd4V\nBvrw6QsNrkREZPmIZaCvjQJ96JQCXUSkKJaB3ldsoZ8ab3AlIiLLRywDfUVLmo5sSi10EZESsQx0\nM+OKrlaGFegiItNiGegAa7va1EIXESkR20BXC11EZLbYBvqV3W2MnLmgm4tERCKxDfT+nnYKDkdP\n6koXERGIcaBf3dMBwKF3zjW4EhGR5SG2gX7NmjDQf65AFxEBYhzoq9ozrGxNc+hdBbqICMQ40M2M\na9Z0cOid840uRURkWYhtoAP0r+lQl4uISCTWgb7pPZ0cGxvnzIWpRpciItJwsQ70969dCcBrw2ca\nXImISOMlItD3D51ucCUiIo0X60Bf29VKV1uGfUNqoYuIVA10M7vKzJ4xs31m9qqZfTGav9rMnjKz\ng9FwVf3Lvag23r92BfvUQhcRqamFngP+2N1vAG4Fft/MbgAeAna7+yZgdzS95H5xfTf73z7NhSk9\n00VEmlvVQHf3IXd/Pho/A+wH1gH3ANuj1bYD99aryPkMXL2KyXyBV46dasTbi4gsG5fUh25m/cDN\nwB6gz92HokXDQN+iVlajD10d9vQ8d+hkI95eRGTZqDnQzawT+AHwoLvP6rR2dwe8wuu2mtmgmQ2O\njo5eVrHl9HS2sLG3g8FDJxZ92yIicVJToJtZhjDMv+3uP4xmHzeztdHytcBIude6+zZ3H3D3gd7e\n3sWo+SIfvno1g4dPki+UPaaIiDSFWq5yMeAxYL+7f7Vk0S5gSzS+Bdi5+OXV5iOb1nBqfIoXj6jb\nRUSaVy0t9NuB3wLuMLMXo59PAw8DnzCzg8Bd0XRDfPR9vaQC4+kDZf9IEBFpCulqK7j7vwNWYfGd\ni1vOwnS1ZfjQ1at4+sAof/or1ze6HBGRhoj1naKl7nr/e9g/dJrDej66iDSpxAT6Z37xSszgiReO\nNboUEZGGSEygX9ndxi+/t4cnXjhGeBWliEhzSUygA/z6zes5/O553WQkIk0pUYH+qQ9cQVdbhm/+\n+88bXYqIyJJLVKC3Z9P85q0b+Kd9wxzSV9OJSJNJVKADbLmtn0wQ8OizbzS6FBGRJZW4QH/PylZ+\n89ar+f7eI/pqOhFpKokLdIA/vPNaOlvS/PWP9+mKFxFpGokM9O72LA/e9T7+7eA7ui5dRJpGIgMd\nYMsv9zNw9Sr+cterDJ0ab3Q5IiJ1l9hATwXGV37jJgoF53/8w159RZ2IJF5iAx2gf00HX/tvm3np\n6Cm+tONlCnpeuogkWKIDHeCTv3AFf/or17Hrpbf5ix/9TKEuIolV9fG5SfB7H3sv5ydz/O0zbzCV\nd/7m1z5ANp34Y5mINJmmCHQz408+eR2ZVMDX/+Ugb504z6Nf+CA9nS2NLk1EZNE0TTPVzHjwrvfx\nyP2befHIGHc/8m88feB4o8sSEVk0TRPoRfdsXsePfu92ejqy/Pe/G+SPHn+R4VMXGl2WiMhla7pA\nB7jhypXs/IPb+YOPX8uPXx7i4195lq8+9Z+MnZ9sdGkiIgtmS3lr/MDAgA8ODi7Z+9XiyInzPPyP\nB/jxz4Zoz6a4/8Mb+N3b+7lqdXujSxMRAcDM9rr7QNX1mj3Qiw4Mn2bbv77JrpfeJldwbtvYw+c+\ntJ67b7yCjpamOHcsIsuUAn2B3h4b5wd7j7Lj+aMcfvc82XTA7e/t4a4b+rjr/X30rWxtdIki0mQW\nLdDN7JvAZ4ARd78xmrcaeBzoBw4B97l71e99i0OgF7k7zx06yT+9OsxT+47z1onzAGxc08Evbezh\n1o2r+XD/atZ2tWJmDa5WRJJsMQP9o8BZ4O9LAv1/Ayfc/WEzewhY5e5/Vu3N4hTopdydgyNnefa1\nEfa8eYKf/vwEZyZyAKzpzPILV3Zx47qVfGBdF9dfsZL1q9pIp5ryfLOI1MGidrmYWT/wZEmgvwZ8\nzN2HzGwt8Ky7X1dtO3EN9LnyBWf/0Gn2Hj7JK8dO8bNjpzg4cpZ89FiBTMro7+lgY28H7+3tZGNv\nJ+tXtbGuu40rulrJKOxF5BLUGugLPdvX5+5D0fgw0LfA7cRSKjBuXNfFjeu6puddmMpzYPgMB4+f\n4Y3Rc7wxepbXR86ye/8IuZLnxwQGfStbWdfdxrpVbaztaqN3RQtrOrP0rmiht7OFNZ0tdLdn1JUj\nIpfksi/fcHc3s4rNfDPbCmwF2LBhw+W+3bLVmkmx+apuNl/VPWv+VL7AkRPnOTY2zrGT47w9Ns7R\nsXD4/FsnGT41xFT+4l9fJmX0dLSwZkWW7rYsXe0ZutoydLdFw2i6qy0bDtszrGhN05FNkwp0IBBp\nRgsN9ONmtraky2Wk0oruvg3YBmGXywLfL7YyqYCNUbdLOe7OqfEpRs9MMHp2gnfOTjJ6ZoJ3zk7w\nTjQcG5/i7bFxTo1PMTY+Nd21U0lrJqCzJU1HSxjwnS1p2ltSdLSk6cyG8ztbUrS3pGnLpGjNBLRm\nUrSkw/FwXvEnmDWeTQX6y0FkmVpooO8CtgAPR8Odi1ZRkzEzutuzdLdn2dS3our67s65yTxj5yc5\nNT7FqfNT00F/biLH2YlcNMxzLho/N5nj3bOTvPXu+enl5yYX9oUfZtCaLj0IBGRSAdnicHrcysyb\nWTebstmvS4frZdLh/HRgpIKAdMqicSN9GdM6CEkzqBroZvYd4GPAGjM7CvwlYZB/z8weAA4D99Wz\nSJlhZnS2hK3u9asWvp1CwRmfynNhKs+FXIELU3nGJ/NM5PJcmAqni8PiehO54vzivAJT+QKTuWiY\ndyZz4bLTF8L5k/nSdZypXIGJaHopBcZ0wIdhHx4wMtF0KjBSZpiF50gCs+lhEBipaL5ZuF4qCOcH\nBqnpdYwgYPq14faMVDCzzdLtpqJ1Z147e3uz1rFwmZUMzZiZz8x0pWHYExcO5y4vbjcww5j9PuWG\nQXSADKLPbFSpKwi3G8xTPxY2GIrvHw5ntsGc6aB0HR2wgRoC3d0/X2HRnYtciyyhILCwS6ZBd8G6\nO/mCh4GfC4fheHgAyBXC5bmCk7uU6XmWTeWdfKHMdN7Ju1Pw8ECXL4TTxRrz0fyCF7dbYCIXrV9c\np+C4E26nUNyeUyhw8fYKs187M2zIrkiUSgcEpufPHBBK16N0OhovHuyYtf7Fr59+3yrb/tbv3MKG\nnvo+UkT3tEtDmFnYHZIKINvoapaP4sGg9ACRLzhEB4CCO0447g5eOr9kemad8EBRy3rhvNJtzxx4\nalnPKb6Xl7xfmel51oOwNifa9pzpcPnMskLJOFGdlV7P9HSVbTP79xMum/m9Vd329PyZaRxaMvW/\nXFmBLrKMBIERYGRSja5E4kh3uIiIJIQCXUQkIRToIiIJoUAXEUkIBbqISEIo0EVEEkKBLiKSEAp0\nEZGEWNLvFDWzUcJnv8y1BnhnyQpZPpr1c4M+uz5787mcz361u/dWW2lJA71iEWaDtXwbR9I06+cG\nfXZ99uazFJ9dXS4iIgmhQBcRSYjlEujbGl1AgzTr5wZ99malz15Hy6IPXURELt9yaaGLiMhlamig\nm9ndZvaamb1uZg81spZ6M7OrzOwZM9tnZq+a2Rej+avN7CkzOxgNL+OL5ZYvM0uZ2Qtm9mQ0fY2Z\n7Yn2/eNmlsivuTCzbjPbYWYHzGy/md3WRPv8j6J/66+Y2XfMrDWp+93MvmlmI2b2Ssm8svvZQv8n\n+h28bGYfXKw6GhboZpYC/hb4FHAD8Hkzu6FR9SyBHPDH7n4DcCvw+9HnfQjY7e6bgN3RdBJ9Edhf\nMv1l4Gvufi1wEnigIVXV3yPAT9z9euAmwt9B4ve5ma0D/hAYcPcbgRRwP8nd738H3D1nXqX9/Clg\nU/SzFXh0sYpoZAv9FuB1d3/T3SeB7wL3NLCeunL3IXd/Pho/Q/gfex3hZ94erbYduLcxFdaPma0H\nfhX4RjRtwB3AjmiVpH7uLuCjwGMA7j7p7mM0wT6PpIE2M0sD7cAQCd3v7v7/gRNzZlfaz/cAf++h\n/wC6zWztYtTRyEBfBxwpmT4azUs8M+sHbgb2AH3uPhQtGgb6GlRWPX0d+BJQiKZ7gDF3z0XTSd33\n1wCjwLei7qZvmFkHTbDP3f0Y8BXgLcIgPwXspTn2e1Gl/Vy37NNJ0SVmZp3AD4AH3f106TIPLzlK\n1GVHZvYZYMTd9za6lgZIAx8EHnX3m4FzzOleSeI+B4j6i+8hPKhdCXRwcZdE01iq/dzIQD8GXFUy\nvT6al1hmliEM82+7+w+j2ceLf25Fw5FG1VcntwOfNbNDhN1qdxD2K3dHf4pDcvf9UeCou++JpncQ\nBnzS9znAXcDP3X3U3aeAHxL+W2iG/V5UaT/XLfsaGejPAZuis95ZwhMmuxpYT11F/caPAfvd/asl\ni3YBW6LxLcDOpa6tntz9z919vbv3E+7jp939C8AzwOei1RL3uQHcfRg4YmbXRbPuBPaR8H0eeQu4\n1czao3/7xc+e+P1eotJ+3gX8dnS1y63AqZKumcvj7g37AT4N/CfwBvAXjaxlCT7rRwj/5HoZeDH6\n+TRhf/Ju4CDwL8DqRtdax9/Bx4Ano/GNwE+B14HvAy2Nrq9On3kzMBjt9x8Bq5plnwN/BRwAXgH+\nAWhJ6n4HvkN4rmCK8C+zByrtZ8AIr/B7A/gZ4ZVAi1KH7hQVEUkInRQVEUkIBbqISEIo0EVEEkKB\nLiKSEAp0EZGEUKCLiCSEAl1EJCEU6CIiCfFfyLRin+gK30kAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10dedfc88>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "c1 = np.arange(3.0, 100.0, 0.05)\n",
+    "c2 = 2/c1/((1/2-1/c1)**2)\n",
+    "plt.plot(c1, c1*c2)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ms = 1 + np.arange(m)\n",
+    "\n",
+    "tight = "
+   ]
   },
   {
    "cell_type": "code",
